# Coinswarm

./: .env.example  .gitignore  API_KEYS_TO_SET.md  API_RATE_LIMITS.md  ARCHITECTURE_DRIFT_ANALYSIS.md  ARCHITECTURE_STATUS_REPORT.md  AUDIT_FINDINGS_AND_FIXES.md  AUTOMATED_DATA_PIPELINE_SETUP.md  AUTOMATED_VERIFICATION_RESULTS.md  CHAOS_TRADES_RESET_GUIDE.md  CLAUDE_CODE_SETUP.md  CLOUDFLARE_API_TOKEN_FIX.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  CLOUDFLARE_PAID_PLAN_LIMITS.md  CLOUDFLARE_TOKEN_PERMISSIONS.md  CODEBASE_EXPLORATION_REPORT.md  CODEBASE_QUALITY_REPORT.md  CODEBASE_STRUCTURE_EXPLORATION.md  CODE_REVIEW.md  CODE_REVIEW_REPORT_2025_11_08.md  COLLECTION_STATUS.md  COMPLETE_SOLUTION_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_REVIEW_REPORT.md  CRYPTOCOMPARE_PRIORITY_ENDPOINTS.md  DATA_COLLECTION_GUIDE.md  DATA_RETRIEVED.md  DEPLOYMENT_AGENTS_SDK.md  DEPLOYMENT_FREE_TIER.md  DEPLOYMENT_GUIDE_QUEUE_FIX.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_IN_PROGRESS.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_RESULTS.md  DEPLOYMENT_RULES.md  DEPLOYMENT_SCALED_$5_PLAN.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VERIFICATION.md  DEPLOYMENT_WORKFLOW.md  (+125 more)
.claude/: important-docs.md
.github/: copilot-instructions.md
.github/workflows/: apply-competition-migration.yml  apply-reasoning-agent-migration.yml  apply-sentiment-migration.yml  ci.yml  cleanup-old-workers.sh  deploy-backfill-worker.yml  deploy-cloudflare-workers.yml  deploy-evolution-agent.yml  deploy-worker.yml  init-evolution-db.yml  nightly.yml
cloudflare-agents/: .gitignore  CHAOS_TRADING_ARCHITECTURE.md  DEPLOYMENT_MONITORING_GUIDE.md  QUEUE_DEPLOYMENT_GUIDE.md  STAY_WITHIN_FREE_LIMITS.md  WORKERS_DEPLOYMENT.md  academic-papers-agent.ts  add-missing-indexes.sql  agent-competition.ts  ai-pattern-analyzer.ts  backtest-worker.ts  collection-alerts-agent.ts  cross-agent-learning-schema.sql  cross-agent-learning.ts  d1-schema-historical-prices-queue.sql  d1-schema-technical-indicators.sql  dashboards-worker.ts  data-collection-monitor.ts  evolution-agent-scaled.ts  evolution-agent-simple.ts  evolution-agent.ts  grand-competition-agent.ts  grand-competition-schema.sql  head-to-head-testing.ts  historical-data-collection-cron.ts  historical-data-queue-consumer.ts  historical-data-queue-producer.ts  historical-data-worker.ts  init-collection-db.ts  model-research-agent.ts  multi-exchange-data-worker.ts  news-sentiment-agent.ts  package-lock.json  package.json  pattern-detector.ts  pattern-recency-weighting.sql  price-data-schema.sql  realtime-price-collection-cron.ts  reasoning-agent-schema.sql  reasoning-agent.ts  (+34 more)
cloudflare-agents/dashboards/: README.md  architecture.html  patterns.html  swarm.html
cloudflare-agents/migrations/: 000-init-collection-progress.sql  001-add-volumeto.sql  002-reset-chaos-trades.sql
cloudflare-agents/public/: agents.html  architecture.html  patterns.html  roadmap.html  swarm.html
cloudflare-workers/: README.md  comprehensive-data-worker.js  data-backfill-worker.js  data-fetcher-paginated.js  data-fetcher.js  evolution-worker.js  minute-data-worker.js  multi-source-data-fetcher.js  simple-coingecko-worker.js  wrangler-multi-source.toml  wrangler.toml
config/: prometheus.yml
docs/: README.md
docs/agents/: multi-agent-architecture.md
pyswarm/: DERIVATIVES_GUIDE.md  DUAL_EMBEDDING_STRATEGY.md  EMBEDDINGS_README.md  EMBEDDING_STRATEGY_GUIDE.md  EMBEDDING_SYSTEM_SETUP.md  FAST_METADATA_MATCHING.md  HYBRID_SEARCH_ARCHITECTURE.md  MODEL_SELECTION_GUIDE.md  NEWS_SOCIAL_DATABASE_GUIDE.md  TEMPORAL_EMBEDDING_STRATEGIES.md  TEMPORAL_EMBEDDING_SUMMARY.md  VECTORIZE_METADATA_TEMPLATE.md  VECTORIZE_METADATA_WITH_OUTCOMES.md  VECTORIZE_SCHEMA_RULES.md  embedding_worker.ts  historical_worker.py  schema_news_social_d1.sql  schema_timeseries_derivatives.sql  single_user_bot.py  temporal_embedding_demo.py  temporal_embedding_implementation.py  temporal_embedding_retrieval_system.py  wrangler_embeddings.toml  wrangler_historical_import.toml  wrangler_local.toml
scripts/: add-historical-prices-table.sql  init-db.sql  safe-migrate.sh  upload-binance-data.sh
(+293 files in other folders)
