[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coinswarm"
version = "0.1.0"
description = "Intelligent Multi-Agent Trading System with Memory-Augmented MARL"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "TBD"}
authors = [
    {name = "Coinswarm Team"}
]
keywords = ["trading", "multi-agent", "reinforcement-learning", "cryptocurrency", "equities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core async framework
    "asyncio-mqtt>=0.16.1",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",

    # MCP Server
    "mcp>=0.9.0",

    # Trading APIs
    "ccxt>=4.2.0",
    "alpaca-py>=0.21.0",

    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",

    # Redis and vector storage
    "redis>=5.0.0",
    "redis-om>=0.2.0",

    # NATS message bus
    "nats-py>=2.6.0",

    # Machine Learning
    "torch>=2.1.0",

    # Database clients
    "asyncpg>=0.29.0",
    "motor>=3.3.0",
    "influxdb-client>=1.38.0",

    # Configuration and logging
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",

    # Monitoring
    "prometheus-client>=0.19.0",

    # Utilities
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "ipython>=8.17.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "faker>=20.1.0",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.0",
]

[project.urls]
Homepage = "https://github.com/TheAIGuyFromAR/Coinswarm"
Documentation = "https://github.com/TheAIGuyFromAR/Coinswarm/tree/main/docs"
Repository = "https://github.com/TheAIGuyFromAR/Coinswarm"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coinswarm = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "alpaca.*",
    "redis.*",
    "nats.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src/coinswarm --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "unit: Unit tests (fast, isolated components)",
    "integration: Integration tests (multi-component)",
    "performance: Performance and latency tests",
    "soundness: Economic soundness tests (EDD validation)",
    "slow: Slow-running tests (backtests, simulations)",
]

[tool.coverage.run]
source = ["src/coinswarm"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
